[metadata]
name = zeug
version = 0.0.1
author = Alexander Terbeznik
author_email = alexander.terbeznik@gmail.com
description = Tools for ML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trbznk/zeug
project_urls =
    Bug Tracker = https://github.com/trbznk/zeug/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude=tests
